--- a/style/st.css
+++ b/style/st.css
@@ -1,136 +1,52 @@
+body {
+    background: #0D1117;
+    color: #fff;
+    margin: 0;
+}
 
-#div1{
-    height: 45px;
-    background-color:rgb(34, 34, 34);
-    border-bottom: solid rgb(41, 41, 41);
+* {
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
 }
-.panel1 {
-    position: absolute; 
-    top: 66px;
-    left: 1111px;
-    width: 320px; 
-    height: 418px;
-    border-radius: 15px;
-    order: 1px solid black;
-    background:rgb(34, 34, 34);
+
+.top_panel {
+    display: flex;
+    background: #000000;
+    height: 56px;
+    gap: 12px;
+    justify-content: space-around;
+    padding: 16px 16px 8px;
+    align-items: flex-start;
 }
-.img1 {
-    width: 140px;
-    margin: 5px 468px;
+.top_panel > * {
+    align-self: center;
 }
-.imgVk {
-    position: absolute;
-    top: 32px;
-    left: 136px;
-    width: 48px;
-    height: 48px;
+.btn-menu {
+    height: 32px;
+    width: 32px;
+    border-radius: 5px;
 }
-.wellcom {
-    text-align: center;
-    margin: 95px 20%;
-    color: white;
-    font-size: 20px;
-    font-weight: 400;
-    font-family: Inter, sans-serif;
+.divStart {
+    flex: 1 1 auto;
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
 }
-.login {
-    width: 272px;
-    height: 36px;
-    position: absolute;
-    top: 140px;
-    left: 24px;
-    border: solid white 0.5px;
-    background-color: rgb(51,51,51);
-    border-radius:10px;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    font-weight: 300;
-    font-family: Inter, sans-serif;
+
+.divEnd {
+    flex: 1 1 auto;
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
 }
-.btn1 {
-    border-radius: 4px;
-    color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
-    border: solid white 5px;
-    width: 272px;
-    height: 36px;
-    border-radius:8px;
-    font-size: 13px;
-    font-weight: 500;
-    font-family: 'Inter', sans-serif;
-    position: absolute;
-    top: 232px;
-    left: 24px;
+.divStart > * {
+    align-self: center;
 }
-.imgQR {
-    position: absolute;
-    top: 312px;
-    left: 24px;
-    width: 76px;
-    height: 76px;
+.divEnd > * {
+    align-self: center;
 }
-.speed {
-    position: absolute;
-    top: 74%;
-    left: 33%;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: 'Inter', sans-serif;
-    color: white;
+
+.btn-user, .btn-repository {
+    height: 32px;
+    padding: 0;
 }
-.camera {
-    position: absolute;
-    top: 330px;
-    left: 33%;
-    font-size: 13px;
-    font-weight: 300;
-    font-family: 'Inter', sans-serif;
-    color:rgb(147, 147, 147);
-}
-.all {
-    position: absolute;
-    top: 356px;
-    left: 33%;
-    font-size: 12px;
-    font-weight: 300;
-    font-family: 'Inter', sans-serif;
-    color:rgb(113,170,235);
-}
-.chek {
-    transform: scale(1.3);
-    position: absolute;
-    top: 192px;
-    left: 26px;
-}
-.imgTel1 {
-    position: absolute;
-    top: 192px;
-    left: 570px;
-    width: 182px;
-    height: 392px;
-}
-.imgTel2 {
-    position: absolute;
-    top: 192px;
-    left: 725px;
-    width: 192px;
-    height: 400px;
-}
-.imgHaltur {
-    position: absolute;
-    top: 86px;
-    left: 489px;
-    width: 501px;
-    height: 73px;
-}
-.Save {
-    position: absolute;
-    top: 182px;
-    left: 50px;
-    font-size: 12px;
-    font-weight: 400;
-    font-family: 'Inter', sans-serif;
-    color:rgb(147, 147, 147);
-}
-body {background: rgb(20, 20, 20);
-color: #000000;}
