--- a/style/st.css
+++ b/style/st.css
@@ -14,7 +14,7 @@ body {
     background: #000000;
     height: 56px;
     gap: 12px;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 16px 16px 8px;
     align-items: flex-start;
 }
@@ -24,11 +24,12 @@ body {
 .btn-menu1 {
     height: 32px;
     width: 32px;
-    background-color: #000000;
+    background-color: #4d3030;
     border-radius: 5px;
     padding: 0;
     border: 1px solid #30363D;
 }
+
 .btn-menu1 :hover {
     outline-color: white;
     outline-style:solid;
@@ -42,15 +43,14 @@ body {
     border: 0;
 }
 .divStart {
-    flex: 1 1 auto;
     display: flex;
     align-items: flex-start;
     gap: 8px;
 }
 
 .divEnd {
-    /* flex: 1 1 auto; */
     display: flex;
+    width: 32px;
     align-items: flex-start;
     gap: 8px;
 }
@@ -65,24 +65,15 @@ body {
     height: 32px;
     padding: 0;
 }
-.search {
-    height: max-content;
-    padding: 0 0;
-    border: 0;
-}
 
 .btn-search {
-    width: max-content;
+    width: 3500px;
+    height: 32px;
     padding: 0 0;
 }
 .img-cat {
     width: 32px;
-    vertical-align: middle;
-
     }
 .img-menu {
-    width: 24px;
-    /* margin: 3px auto; */
-    vertical-align: middle;
-
+    width: 20px;
 }   
