--- a/style/st.css
+++ b/style/st.css
@@ -14,6 +14,7 @@ body {
     
     background: #000000;
     height: 56px;
+    width: max;
     gap: 12px;
     justify-content: space-between;
     padding: 16px 16px 8px;
@@ -40,7 +41,7 @@ body {
     border: 1px solid #81243b;
 }
 
-.btn-menu1 :hover {
+.btn-menu1:hover {
     outline-color: white;
     outline-style:solid;
 }
@@ -59,8 +60,7 @@ body {
 
 .divEnd {
     display: flex;
-    width: 32px;
-    align-items: flex-start;
+S    align-items: flex-start;
     gap: 8px;
 }
 .divStart > * {
