--- a/style/st.css
+++ b/style/st.css
@@ -73,3 +73,22 @@ body {
      transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
     }
    }
+
+   @keyframes fade {
+    0% { opacity: 0; }
+    11.11% { opacity: 1; }
+    33.33% { opacity: 1; }
+    44.44% { opacity: 0; }
+    100% { opacity: 0; }
+  }
+  
+  .fadein { position:relative; width:70%;}
+  .fadein img { position:absolute; width:100%; left:0; right:0; opacity:0; animation-name: fade; animation-duration: 6s; animation-iteration-count: infinite; }
+  .fadein img:nth-child(1) { animation-delay: 0s; }
+  .fadein img:nth-child(2) { animation-delay: 1s; }
+  .fadein img:nth-child(3) { animation-delay: 2s; }
+  .fadein img:nth-child(4) { animation-delay: 3s; }
+  .fadein img:nth-child(5) { animation-delay: 4s; }
+  .fadein img:nth-child(6) { animation-delay: 5s; }
+  
+  
