--- a/style/st.css
+++ b/style/st.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgba(51, 51, 51, 0.616);
     box-sizing: border-box;
     margin: 0;
     
