--- a/style/st.css
+++ b/style/st.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgba(0, 48, 179, 0.623);
     box-sizing: border-box;
     margin: 0;
     
